update readme fix cards row misalignment

--- a/index.css
+++ b/index.css
@@ -214,7 +214,6 @@ dialog {
 .cardsRow {
     display: flex;
     justify-content: space-evenly;
-    align-items: center;
     margin-top: 1rem;
     margin-bottom: 1rem;
 }
